# anfs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benchmarks/: _agent_loop.py  _anfs_tools.py  _corpus.py  agent_memory_benchmark.py  aggregate_report.py  coding_agent_compat_benchmark.py  concurrency_merge_benchmark.py  concurrency_real_benchmark.py  deepseek_client.py  leak_llm_baseline.py  leak_redteam_benchmark.py  provenance_benchmark.py  ref_contention_benchmark.py  structural_accuracy_benchmark.py  structural_recall_benchmark.py  task_memory_benchmark.py  token_efficiency_benchmark.py  worktree_cost_benchmark.py
docs/: 00_project_background.md  01_prd.md  02_gap_analysis_vs_existing_fs.md  03_progress_tracker.md  04_design_discussion_notes.md  04_refactor_plan.md  05_agent_filesystem_design.md  06_kernel_contract.md  07_agent_fs_requirements_matrix.md  08_agent_native_fs_conformance.md  09_complexity_audit.md  10_workload_datasets.md  11_paper_plan.md  12_unified_fragment_parser_system.md  13_usefulness_evidence_plan.md  README.md
report/: design-explained.html  index.html
src/: blob.rs  bundle.rs  checkout.rs  chunked.rs  common.rs  embedding.rs  engine.rs  errors.rs  events.rs  fork.rs  fragments.rs  gc_snapshot.rs  integrity.rs  lib.rs  lineage.rs  manifest.rs  naming.rs  observability.rs  policy_labels.rs  query.rs  refs.rs  replay.rs  runs.rs  schema.rs  span_parser.rs  types.rs  visibility.rs  workspace.rs  workspace_ops.rs  worktree.rs
tests/: _helpers.py  conftest.py  test_approval_lifecycle.py  test_bundles.py  test_chunked.py  test_demo.py  (+16 more)
(+32 files in other folders)
