[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "anfs-core"
version = "0.1.0"
description = "Agent-Native File System Rust core with PyO3 bindings"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "anfs_core"
